SYNTAX
#
# File : SYNTAX
# Author : Jeremy Cuevas (GitHub/GitLab Username: IamNaCl)
# Description: Cell syntax for compiler/interpreter creators.
#

# Literals
Number             := /([0-9]+\.[0-9]+|[0-9]+|\.[0-9]+)([Ee][+-]?[0-9]+)?/

String             := /(\"(\"\"|[^""])*\"|\'(\'\'|[^''])*\'|\`(\`\`|[^``])*\`)/

Identifier         := /[a-zA-Z_\$][a-zA-Z_\$0-9]*/

Cell               := /[\$\:][a-zA-Z]+[0-9]{1,4}+/

Range              := <Cell><Cell>

FunctionCall       := <Identifier ('(' (<Expression> (',' <Expression>)*)? ')')?

# Expression evaluator.
Factor             := <Number> | <String> | <FunctionCall> | <Cell> | <Range>

NegatedFactor      := ('+' | '-')? <Factor>

Term               := <NegatedFactor> (('*' | '/') <NegatedFactor>)()

ArithmethicExpr    := <Term> (('+' | '-') <Term>)*

Relation           := <ArithmethicExpr> (('<=' | '<' | '>' | '>=') <ArithmethicExpr>)?

Equality           := <Relation> (('=' | '==') <Equality>)?

Concatenation      := <Equality> ('&' <Equality>)*

Expression         := <Concatenation> (',' <Concatenation>)*
